# rust-ai-gateway

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: rust.yml
crates/dashboard/: Cargo.toml
crates/dashboard/src/: main.rs  templates.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  main.rs  state.rs
crates/gateway/src/config/: mod.rs
crates/gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
crates/gateway/src/routes/: auth.rs  chat.rs  health.rs  mod.rs  stats.rs
crates/gateway/tests/: integration_test.rs  provider_test.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/models/: api_key.rs  chat.rs  mod.rs  usage.rs  user.rs
crates/shared/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/shared/tests/: models_test.rs  providers_test.rs
infra/: main.tf
migrations/: 20240101000001_initial.sql
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: gateway.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
scripts/: test.sh
