[workspace]
members = ["crates/gateway", "crates/shared", "crates/dashboard"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "timeout"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
argon2 = "0.5"
jsonwebtoken = "9"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
futures = "0.3"
rand = "0.8"

